# mlx_sam3

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml  test.py
app/: run.sh
app/backend/: main.py
app/frontend/src/app/: globals.css  page.tsx
app/frontend/src/components/: SegmentationCanvas.tsx
app/frontend/src/lib/: api.ts
sam3/: convert.py  model_builder.py
sam3/model/: geometry_encoders.py  model_misc.py  necks.py  position_encoding.py  sam3_image.py  sam3_image_processor.py  text_encoder_ve.py  tokenizer_ve.py  vitdet.py  vl_combiner.py
scripts/: README.md
